@@ -4,8 +4,11 @@
 class Net::SSLeay::DER {
   
   use Net::SSLeay::OCSP_REQUEST;
+  use Net::SSLeay::OCSP_RESPONSE;
   
   # Class Methods
   native static method d2i_OCSP_REQUEST : Net::SSLeay::OCSP_REQUEST ($a_ref : Net::SSLeay::OCSP_REQUEST[], $ppin_ref : string[], $length : long);
+  
+  native static method d2i_OCSP_RESPONSE : Net::SSLeay::OCSP_RESPONSE ($a_ref : Net::SSLeay::OCSP_RESPONSE[], $ppin_ref : string[], $length : long);
   
 }
